--- a/src/4_features/nft-page/NftTable/ui/NftTable.scss
+++ b/src/4_features/nft-page/NftTable/ui/NftTable.scss
@@ -1,9 +1,9 @@
-.CoinsTable{
+.NftTable{
   margin-top: 50px;
   width: 100%;
 }
 
-.CoinsTable .container-row{
+.NftTable .container-row{
   width: 100%;
   padding: 1em;
   background: inherit;
@@ -18,25 +18,25 @@
     background: #232323;
   }
 
-  .coin-info{
+  .nft-info{
     width: 35%;
     .item-col{
       width: 5%;
     }
     .item-long{
-      width: 90%;
+      width: 60%;
     }
   }
-  .coin-stats{
+  .nft-stats{
     width: 65%;
     justify-content: space-between;
     .item-col{
-      width: 20%;
+      width: 50%;
     }
   }
 
   //Coin stats
-  .coin-info, .coin-stats{
+  .nft-info, .nft-stats{
     display: flex;
     align-items: center;
     gap: 2em;
@@ -63,9 +63,16 @@
 }
 
 //Label container
-.CoinsTable .container-label{
+.NftTable .container-label{
   padding: 0.5em 1em;
   border-radius: 5px;
   background: #232323;
   margin-bottom: 10px;
+}
+
+//item-col image
+.NftTable .item-col img{
+  width: 25px;
+  height: 25px;
+  margin-right: 15px;
 }
