--- a/src/4_features/auth/RegForm/ui/RegForm.scss
+++ b/src/4_features/auth/RegForm/ui/RegForm.scss
@@ -1,4 +1,4 @@
-.LoginForm{
+.RegForm{
   width: 100%;
   margin-top: 100px;
 
@@ -8,12 +8,12 @@
 }
 
 //title
-.LoginForm .title{
+.RegForm .title{
   display: flex;
   align-items: center;
   gap: 1em;
 }
-.LoginForm .title h1{
+.RegForm .title h1{
   color: #FFF;
   font-size: 24px;
   font-style: normal;
@@ -21,7 +21,7 @@
   line-height: normal;
   margin-bottom: 0;
 }
-.LoginForm .title a{
+.RegForm .title a{
   text-decoration: none;
   color: #FFF;
   font-size: 24px;
@@ -32,7 +32,7 @@
   transition: ease-in-out .3s;
   opacity: 30%;
 }
-.LoginForm .title a:hover{
+.RegForm .title a:hover{
   opacity: 100%;
 }
 
@@ -40,13 +40,13 @@
 
 
 //input/inputs
-.LoginForm .inputs-container{
+.RegForm .inputs-container{
   width: 50%;
   display: flex;
   flex-direction: column;
   gap: 1em;
 }
-.LoginForm .inputs-container input{
+.RegForm .inputs-container input{
   border-radius: 5px;
   border: 1px solid #515151;
   background: none;
@@ -60,12 +60,12 @@
   font-weight: 400;
   line-height: 120%; /* 16.8px */
 }
-.LoginForm .inputs-container input:focus{
+.RegForm .inputs-container input:focus{
   border: 1px solid #fff;
 }
 
 //button
-.LoginForm button{
+.RegForm button{
   width: 50%;
   border-radius: 5px;
   background: #326CF4;
@@ -80,17 +80,17 @@
   font-weight: 400;
   line-height: 120%; /* 16.8px */
 }
-.LoginForm button:hover{
+.RegForm button:hover{
   background: #245cda;
 }
 
 
 
 @media (max-width: 768px){
-  .LoginForm .inputs-container{
+  .RegForm .inputs-container{
     width: 100%;
   }
-  .LoginForm button{
+  .RegForm button{
     width: 100%;
   }
 }
